--- a/inventorysite/templates/extends/pbase.html
+++ b/inventorysite/templates/extends/pbase.html
@@ -50,24 +50,12 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'inventory_dashboard' %}">Inventory Manager</a>
+            <a class="navbar-brand" href="#">Procurement DashBoard</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-danger mx-2" href="#">Fuel Tracker</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-danger mx-2" href="{% url 'diesel_list' %}">Diesel Tracker</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-danger mx-2" href="{% url 'add_product' %}">Add Product</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-danger mx-2" href="{% url 'add_category' %}">Add Category</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-danger mx-2" href="{% url 'logout' %}">Logout</a>
                     </li>
@@ -86,3 +74,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
