--- a/inventorysite/templates/procurement/dashboard.html
+++ b/inventorysite/templates/procurement/dashboard.html
@@ -1,9 +1,9 @@
 
-{% extends 'extends/base.html' %}
+{% extends 'extends/pbase.html' %}
 
 {% block content %}
 <div class="container my-5">
-    <h1 class="text-center mb-5">Inventory Managers Dashboard</h1>
+    <h1 class="text-center mb-5">Procurement Dashboard</h1>
 
     <!-- Products Section (Grouped by Category) -->
     <h2 class="mb-4">Products by Category</h2>
@@ -29,7 +29,7 @@
                                 
                                 <!-- View Purchases Button -->
                                 <div class="text-center mt-3">
-                                    <a href="{% url 'product_purchases' product.id %}" class="btn btn-outline-primary btn-sm">Product Details</a>
+                                    <a href="#" class="btn btn-outline-primary btn-sm">Add Stock Balance</a>
                                 </div>
                             </div>
                         </div>
@@ -43,22 +43,5 @@
         <p class="text-muted">No categories available.</p>
     {% endfor %}
     
-
-    <!-- Vendors Section -->
-    <h2 class="mb-4">Vendors</h2>
-    <div class="list-group mb-5">
-        {% for vendor in vendors %}
-            <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center shadow-sm">
-                <div>
-                    <h5 class="mb-1">{{ vendor.name }}</h5>
-                    <p class="mb-1">{{ vendor.contact_info }}</p>
-                    <small class="text-muted">Created on: {{ vendor.created_at|date:"F j, Y" }}</small>
-                </div>
-                <span class="badge bg-primary rounded-pill">Vendor</span>
-            </div>
-        {% empty %}
-            <p class="text-muted">No vendors available.</p>
-        {% endfor %}
-    </div>
 </div>
 {% endblock %}
